# rust-mvcs

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/controllers/: index.rs  user.rs
src/entities/: user.rs
src/services/: user.rs
